Appendix-k to Appendix-k-books
Renamed page; updated associated links & files per Checklist; content revision still in progress

--- a/Python scripts for Keepers/DCRMRthebook.ipynb
+++ b/Python scripts for Keepers/DCRMRthebook.ipynb
@@ -122,7 +122,7 @@
     "         'Identifiers.md.docx','Identifier-for-manifestation.md.docx','Fingerprint.md.docx',\n",
     "         'Term-of-availability.md.docx','Note-on-identifier-for-manifestation.md.docx',\n",
     "         'Appendices.md.docx','Appendix-a.md.docx','Appendix-b.md.docx','Appendix-c.md.docx','Appendix-d.md.docx',\n",
-    "         'Appendix-e.md.docx','Appendix-h.md.docx','Appendix-j.md.docx','Appendix-k.md.docx', 'Glossary.md.docx', 'Changelog.md.docx']\n",
+    "         'Appendix-e.md.docx','Appendix-h.md.docx','Appendix-j.md.docx','Appendix-k-books.md.docx', 'Glossary.md.docx', 'Changelog.md.docx']\n",
     "composed = \"_composed.docx\"\n",
     "\n",
     "result = Document(files[0])\n",
